--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
 
     <form class="username-form">
       <h1>🎮 Quiz Battle Arena 🎮</h1>
-      <p>Test your knowledge in real-time multiplayer trivia!</p>
+      <p>Test your knowledge in real-time multiplayer trivia</p>
       <input id="username-input" placeholder="Enter your player name"></input>
       <button id="create-player-btn">Join Battle</button>
     </form>
